[package]
name = "stack-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "3.0"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.0"
regex = "1.10.4"
sys-info = "0.9.1"
rusqlite = { version = "0.25.2", features = ["bundled"] }
tera = "1.12.0"
